<resources>
    <string name="app_name">Pill Minder Plus </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="pill_minder">Pill Minder Plus </string>
    <string name="title_screen_one">Add medications that you take regularly</string>
    <string name="description_screen_one">Start adding any medication or vitamin \n you are taking on a regular basis.</string>
    <string name="next">Next</string>
    <string name="title_screen_two">Schedule for the time reminder</string>
    <string name="description_screen_two">Set a time, start and end date for your pills, You can \n customize your own schedule.</string>
    <string name="title_screen_three">Get notification to take your pills</string>
    <string name="description_screen_three">Receive reminders to help you take \n your pills on time</string>
    <string name="finish">Finish</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="check_connection">Check your connection settings \n and try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="register">Register</string>
    <string name="not_a_member">Not registered as a member?</string>
    <string name="img_picked_cancelled">Image pick cancelled</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Calender</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error">Error!!</string>
    <string name="ok">OK</string>
    <string name="full_name">Full Name</string>
    <string name="new_account">New Account</string>
    <string name="upload_profile_picture">Upload your \n profile picture</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="set_your_profile_img">Please, Set your profile image!</string>
    <string name="type_your_full_name">Please, Type your Full Name!</string>
    <string name="type_your_email">Please, Type your Email!</string>
    <string name="type_email_address_correctly">Please, Type your Email address correctly!\nlike: example@example.com</string>
    <string name="type_your_password">Please, Type your Password!</string>
    <string name="password_length">Password should be at least 6 characters long!</string>
    <string name="confirm_your_password">Please, Confirm your password!</string>
    <string name="error_msg_password_incompatible">Two passwords incompatible</string>
    <string name="addamed">Add New Medicine</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_link_sent">Email sent to you Successfully! \nPlease, check your email inbox.</string>
    <string name="reset">Reset</string>
    <string name="google_sign_in_failed">Google sign in failed!</string>
    <string name="coming_soon">This feature isn\'t activate currently</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="logout">Logout</string>
    <string name="profiles">Profiles</string>
    <string name="med_friends">friends</string>
    <string-array name="time_frequency_array">
        <item>Once Daily</item>
        <item>Twice Daily</item>
        <item>3 Times a Day</item>
        <item>4 Times a Day</item>
    </string-array>
    <string name="open_dialogue">Click again to open dialogue!</string>
    <string name="personal_description">Hello user, it\'s time to take your medecines.</string>
    <string name="dose_time">2:00 AM</string>
    <string name="dose_name">Dose Name</string>
    <string name="dose_description">50 g, take 1 Pill(s) before eating \nOriginally scheduled for 8:00 AM, \ntoday, Sep 11</string>
    <string name="skip">Skip</string>
    <string name="take">Take</string>
    <string name="snooze">Snooze</string>
    <string name="hello">Hello</string>
    <string name="time_to_take">it\'s time to take your</string>
    <string name="meds">medecines</string>
    <string name="before_eating">before eating \nOriginally scheduled for</string>
    <string name="warning">Warning</string>
    <string name="additional_permissions">Please Enable the additional permissions</string>
    <string name="additional_permissions_description">You won\'t receive notifications while the app is in background if you disable these permissions.\n\nEnable…\n1) Display pop-up windows while running in the background \n2) Display pop-up window</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="error_msg_permission_required">Permission required!\nPlease, give the permission to work correctly!</string>
    <string name="snooze_for_five_minutes">Snooze for 5 minutes</string>
    <string name="have_no_reminders">You don\'t have any reminders</string>
    <string name="add_a_new_pill">Tap the button below to add new reminders</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="connection_back">Connection Back</string>
    <string name="medicine_time">Hello, it\'s time to take your medicine.</string>
    <string name="caregiverDesc">A care giver is a family member or a friend that helps you remembering or taking your medicines in case you forgot.\n \n Please enter your care giver email:</string>
    <string name="send">Send</string>
    <string name="time_card">07:30</string>
    <string name="cefroxin">Advil</string>
    <string name="strength_unit">50mg</string>
    <string name="everyday">Everyday</string>
    <string name="after_eating">After eating</string>
    <string name="future">Future</string>
    <string name="amount_form">Solution</string>
    <string name="friendsRequests">Friend Requests</string>
    <string name="medFriends">Friends</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="refill">You need to refill this medicine.\nRemaining amount = </string>
    <string name="do_not_forgot_medicine">Let\'s make sure you don\'t forget your medicine</string>
    <string name="appointed_time">We will remind you at the appointed time</string>
    <string name="google_map_key">AIzaSyDP9hn-HAM57MmPkUWLDfZ1VfMJwxMohAs</string>
    <string name="maps">Maps</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friends">Friends</string>
    <string name="show_you_all_places">By checking your current location the app will show \nyou all the pharmacies and medical centers that \nnearby your location.</string>
    <string name="get_nearby_places"><![CDATA[Get nearby pharmcies &amp; medical centers]]></string>
    <string name="medications">Medications</string>
    <string name="how_many_do_you_take">How many do you take?</string>
</resources>
