<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.application.pillminderplus.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@+id/map_activity"
        android:name="com.application.pillminderplus.maps.MapActivity"
        android:label="@string/maps" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.application.pillminderplus.medications.MedicationsFragment"
        android:label="@string/title_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_displayMedFragment"
            app:destination="@id/displayMedFragment" />
    </fragment>
    <fragment
        android:id="@+id/displayMedFragment"
        android:name="com.application.pillminderplus.medecinetasks.displaymedicine.DisplayMedicineFragment"
        android:label="DisplayMedFragment" />

</navigation>